--- a/smcu/Makefile
+++ b/smcu/Makefile
@@ -6,3 +6,6 @@ all:
 
 clean:
 	cargo clean
+
+unit_test: test/test.cc
+	$(CXX) -o $@ -Iinc -L target/debug -g -O0 $< -lsmcu -lgtest_main -lgtest -lpthread -ldl
