--- a/smcu/Cargo.toml
+++ b/smcu/Cargo.toml
@@ -11,3 +11,7 @@ crate-type = ["staticlib"]
 [dependencies]
 rand = "*"
 ed25519-dalek = "1"
+serde = { version = "1", features = ["derive"] }
+toml = "0.5"
+bs58 = "0.4"
+log = "0.4"
