--- a/smcu/Cargo.toml
+++ b/smcu/Cargo.toml
@@ -15,3 +15,6 @@ serde = { version = "1", features = ["derive"] }
 toml = "0.5"
 bs58 = "0.4"
 log = "0.4"
+
+[dev-dependencies]
+simple_logger = "*"
