--- a/libsmcu/Cargo.toml
+++ b/libsmcu/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1", features = ["derive"] }
 toml = "0.5"
 bs58 = "0.4"
 log = "0.4"
+bytes = "1"
 
 [dev-dependencies]
 simple_logger = "*"
